--- a/src/flash/CMakeLists.txt
+++ b/src/flash/CMakeLists.txt
@@ -1,7 +1,19 @@
+include_directories(
+    lib/libcintelhex/include
+)
+
+file(GLOB LIBCINTELHEXFILES
+    ${PROJECT_SOURCE_DIR}/lib/libcintelhex/src/ihex_parse.c
+    ${PROJECT_SOURCE_DIR}/lib/libcintelhex/src/ihex_record.c
+)
+
 add_library(
     flash
 STATIC
     flasher.cpp
+    ping360flasher.cpp
+    pic-hex.cpp
+    ${LIBCINTELHEXFILES}
 )
 
 target_link_libraries(
