--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = https://github.com/fmtlib/fmt
 [submodule "lib/libcintelhex"]
 	path = lib/libcintelhex
-	url = https://github.com/martin-helmich/libcintelhex.git
+	url = https://github.com/jaxxzer/libcintelhex
